# Click-Between-Frames-Android

./: CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  about.md  changelog.md  mod.json  multi-platform.yml
.github/Workflows/: multi-platform.yml
.github/workflows/: Nightmooncbf.yml  build.yml
build-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-armeabi/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: CMakeLists.txt  includes.hpp  input.cpp  input.hpp  main.cpp
